Button changes in Landing Page

--- a/src/components/landingPage/landingPage.css
+++ b/src/components/landingPage/landingPage.css
@@ -47,6 +47,7 @@
     background-color: #684BFE;
     font-family: 'Inter', sans-serif;
     padding: 1.2rem 1.5rem;
+    border-color: transparent;
     border-radius: 10px;
     font-size: 1.3rem;
     font-weight: 500;
