--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
+  background: #111634;
+  color: #fff;
 }
 body::-webkit-scrollbar {
   display: none;
