--- a/src/components/Profilepage/BottomHeader.module.css
+++ b/src/components/Profilepage/BottomHeader.module.css
@@ -19,8 +19,11 @@ justify-content: space-between;
 
   }
  Navlink > h3{
-    color:#fff;
-    text-decoration: none;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 48px;
   }
   
   
