--- a/src/components/ProjectDetails/ProjectDetails.module.css
+++ b/src/components/ProjectDetails/ProjectDetails.module.css
@@ -1,3 +1,7 @@
+*{
+    overflow-x: hidden;
+    
+}
 .bottomContainer{
 background-color: #111634;
 margin: -10px;
@@ -6,10 +10,16 @@ height: auto
 }
 
 .bottomContainer >h3{
-    color:antiquewhite;
-    font-size: x-large;
-   padding-top: 40px;
-   padding-left: 40px;
+   background-color: #111634;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 54px;
+
+   
+    overflow-y: hidden;
+    letter-spacing: 0.04em;
+
 }
 .upper{
     display: flex;
@@ -25,6 +35,7 @@ height: auto
 .details > h4{
     color:antiquewhite;
     font-size: large;
+    overflow-y: hidden;
 }
 .details >p{
     color: #A4A4A4;
