--- a/client/src/components/Profilepage/BottomHeader.module.css
+++ b/client/src/components/Profilepage/BottomHeader.module.css
@@ -18,12 +18,13 @@
 justify-content: space-between;
 
   }
- Navlink > h3{
+ h4{
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
   line-height: 48px;
+  text-decoration: none;
   }
   
   
