--- a/client/src/components/loginPage/Login.module.css
+++ b/client/src/components/loginPage/Login.module.css
@@ -10,16 +10,17 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 0px 2.5px rgba(15,15,15,0.19);
+    
 
 }
 
 .mutedlink{
-    font-size: 12px;
-    color:rgba(200,200,200,0.8);
+    font-size: 15px;
+    color:#fff;
     font-weight: 500;
     text-decoration: none;
-    /* margin-left: 250px;*/
+    margin-left: 250px;
+    margin-top: -10px;
 }
 
 .boldlink{
@@ -35,12 +36,12 @@ border-top: none;
 border-left: none;
 border-right: none;
 width:100%;
-height:42px;
+height:60px;
 outline:none;
-background: #232B53;
+background: #111634;
 margin-bottom: 20px;
 box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-border-radius: 10px;
+border-radius: 8px;
 padding:0px 30px;
 border-bottom:2px solid transparent;
 transition: all 200ms ease-in-out ;
@@ -57,40 +58,57 @@ transition: all 200ms ease-in-out ;
 .inputcontainer:focus{
     outline:none;
     border-bottom: 3px solid rgba(104,75,254,1);
+    background-color: #fff;
 }
 
-.submitbutton{
+.submitbutton1{
     display: flex;
     justify-content: space-around;
-    width:40%;
+    width:100%;
     padding:14px 30%;
     
     color:#fff;
     font-size: 15px;
     font-weight: 600;
 border:none;
-border-radius:100px 100px 100px 100px;
+border-radius: 5px;
 cursor:pointer;
 transition:all, 240ms ease-in-out;
-background: rgba(104,75,254,1);
+background:  #684BFE;
 
 }
 
-.submitbutton:hover{
-    filter: brightness(1.4);
+.submitbutton1:hover{
+    border: 2px solid #684BFE;
+    background-color: transparent;
 }
 
-.image{
-    /* background: url("../../../images/image\ 5.png"); */
-    
-   border:20px solid #684BFE;
- 
-box-shadow: 0px 4px 4px rgba(104, 75, 254, 0.47);
-    border-radius: 50%;
-height: 150px;
-width: 150px;
-background-clip: inherit;
-
-
-
+.submitbutton2{
+    display: flex;
+align-items: center;
+justify-content: center;
+    width:100%;
+    padding:8px 0%;
+   
+    color:#fff;
+    font-size: px;
+    font-weight: 600;
+border:none;
+border-radius: 5px;
+cursor:pointer;
+transition:all, 240ms ease-in-out;
+background-color: transparent;
+border: 2px solid #684BFE;
 }
+.submitbutton2>img{
+    margin-right: 8px;
+    height: 25px;
+}
+.submitbutton2:hover{
+    background-color: #684BFE;
+}
+
+p{
+    font-size: 18px;
+    color:#fff;
+    font-weight: 500;}
