--- a/client/src/components/loginPage/Signup.module.css
+++ b/client/src/components/loginPage/Signup.module.css
@@ -1,25 +1,25 @@
 .boxcontainer{
-    width:100%;
-    display: flex;
+    width:550px;
+    min-height:200px;
+    display:flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
+    border-radius: 15px;
+    background-color: #2B3566;
+    box-shadow: 0 0 2px rgba(15,15,15,0.28);
+    position: relative;
+    overflow: hidden;
 }
 
 .formcontainer{
-    width: 100%;
-    display: flex;
+    width:90%;
+    display:flex;
     flex-direction: column;
-    box-shadow: 0px 0px 2.5px rgba(15,15,15,0.19);
+   padding-left: 4em;;
+   padding-top: 3em;
+    
 
 }
 
-.mutedlink{
-    font-size: 12px;
-    color:rgba(200,200,200,0.8);
-    font-weight: 500;
-    text-decoration: none;
-}
 
 .boldlink{
     font-size: 12px;
@@ -34,12 +34,12 @@ border-top: none;
 border-left: none;
 border-right: none;
 width:100%;
-height:42px;
+height:60px;
 outline:none;
-background: #232B53;
+background: #111634;
 margin-bottom: 20px;
 box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-border-radius: 10px;
+border-radius: 8px;
 padding:0px 30px;
 border-bottom:2px solid transparent;
 transition: all 200ms ease-in-out ;
@@ -56,41 +56,28 @@ transition: all 200ms ease-in-out ;
 .inputcontainer:focus{
     outline:none;
     border-bottom: 3px solid rgba(104,75,254,1);
+    background-color: #fff;
 }
 
-.submitbutton{
+
+.submitbutton1{
     display: flex;
     justify-content: space-around;
-    width:40%;
-    padding:14px 40%;
-    /* margin-left: -15px; */
+    width:70%;
+    padding:14px 0%;
+    margin-left: 5.5em;
     color:#fff;
     font-size: 15px;
     font-weight: 600;
 border:none;
-border-radius:30px;
+border-radius: 5px;
 cursor:pointer;
 transition:all, 240ms ease-in-out;
-background: rgba(104,75,254,1);
+background:  #684BFE;
 
 }
 
-.submitbutton:hover{
-    filter: brightness(1.4);
-}
-
-.image{
-    /* background: url("../../../images/image\ 5.png"); */
-    
-   border:20px solid #684BFE;
- 
-box-shadow: 0px 4px 4px rgba(104, 75, 254, 0.47);
-    border-radius: 50%;
-height: 150px;
-width: 150px;
-margin-top:-100px;
-
-
-
-
+.submitbutton1:hover{
+    border: 2px solid #684BFE;
+    background-color: transparent;
 }
