--- a/client/src/components/Profilepage/Logout.module.css
+++ b/client/src/components/Profilepage/Logout.module.css
@@ -9,6 +9,7 @@
     border: none;
     padding: 0.7rem 1.5rem;
     margin-right: 1rem;
+    margin-bottom: 1em;
     border-radius: 10px;
     font-size: 1.3rem;
     font-weight: 500;
