--- a/client/src/components/Profilepage/BottomHeader.module.css
+++ b/client/src/components/Profilepage/BottomHeader.module.css
@@ -18,19 +18,17 @@
 justify-content: space-between;
 
   }
- h4{
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 32px;
+ p{
+  font-family: var(--bs-body-font-family);
+  font-weight: 600;
+  font-size: 22px;
   line-height: 48px;
-  text-decoration: none;
+  
   }
   
   
   .header button {
-    font-size: 20px;
-    font-weight: 500;
+text-decoration: none;
 
     width: 100%;
     padding: 0rem 4.2rem;
