--- a/client/src/components/Profilepage/Card.css
+++ b/client/src/components/Profilepage/Card.css
@@ -5,6 +5,7 @@
     padding: 1.2rem;
     margin: 1rem;
     width: 24rem;
+    height: fit-content;
 }
 .bg-color{
     background-color: #684BFE;
@@ -14,17 +15,22 @@
     font-size: 21px;
 }
 .cardSubtitle{
-    font-weight: 100;
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 16px;
+   margin-top: -30px;
+   margin-left: -10px;
 }
 .tech-stack{
     color: #A4A4A4;
-    font-size: 17px;
-    font-weight: 200;
+    font-size: 13px;
+    width:100%
+ 
 }
 .tech-stack > p{
     display: inline-block;
-    margin-right: 0.5rem;
+    margin-right: 0.58rem;
+    font-size: 14px;
+   margin-top:-10px
 }
 
 .tech-stack > p:nth-child(1):before{
