--- a/client/src/components/landingPage/landingPage.css
+++ b/client/src/components/landingPage/landingPage.css
@@ -2,6 +2,7 @@
 .landing-page{
     background-color: #111634;
     color: white;
+    z-index: 800;
 }
 .cardLandingPage{
     display: flex;
@@ -94,3 +95,4 @@
     padding: 2rem;
     color: #fff;
 }
+
