--- a/client/src/components/Profilepage/Card.css
+++ b/client/src/components/Profilepage/Card.css
@@ -12,13 +12,15 @@
 }
 .cardTitle{
     font-weight: 600;
-    font-size: 21px;
+    font-size: 16px;
 }
 .cardSubtitle{
     font-weight: 400;
-    font-size: 16px;
-   margin-top: -30px;
+    font-size: 16px !important;
+   margin-top: -10px;
    margin-left: -10px;
+   line-height: 25px;
+   text-overflow: ellipsis !important;
 }
 .tech-stack{
     color: #A4A4A4;
