--- a/client/src/components/homeCards/homeCards.css
+++ b/client/src/components/homeCards/homeCards.css
@@ -2,7 +2,7 @@
     color: #fff;
     background-color: #232B53;
     border-radius: 9px;
-    padding: 1.2rem;
+    padding: 1rem;
     margin: 1rem;
     width: 24rem;
     cursor: pointer;
@@ -17,6 +17,7 @@
 .cardSubtitle{
     font-weight: 100;
     font-size: 14px;
+    margin-top: -20px !important;
 }
 .tech-stack{
     color: #A4A4A4;
@@ -24,8 +25,9 @@
     font-weight: 200;
 }
 .tech-stack > p{
-    display: inline-block;
-    margin-right: 0.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    
 }
 
 .tech-stack > p:nth-child(1):before{
@@ -36,6 +38,7 @@
     border-radius: 50%;
     background-color: #FD4A71;
     opacity: 0.8;
+    padding-right: -50px;
 }
 .tech-stack > p:nth-child(2):before{
     content: '';
@@ -45,6 +48,7 @@
     border-radius: 50%;
     background-color: #684BFE;
     opacity: 0.8;
+    
 }
 .tech-stack > p:nth-child(3):before{
     content: '';
