--- a/client/src/components/ProjectDetails/ProjectDetails.module.css
+++ b/client/src/components/ProjectDetails/ProjectDetails.module.css
@@ -74,3 +74,10 @@ padding-left: 40px;
 margin-bottom: 20px;
 
 }
+.pics{
+    width:70%;
+    height: 400px;
+    overflow-y: hidden;
+    border-radius: 15px;
+    margin-left: 220px;
+}
