--- a/client/src/components/ipfs/uploadproject.css
+++ b/client/src/components/ipfs/uploadproject.css
@@ -1,47 +1,81 @@
 .project-upload {
   background-color: #111634;
 }
+
 .cumpulsory {
   color: red;
 }
-.project-upload > h1 {
+
+.w-55 {
+  width: 55rem;
+}
+
+.w-55>input {
+  width: auto;
+}
+
+.project-upload>h1 {
   font-size: 1.5rem;
   margin-bottom: 2rem;
   margin-top: 1.5rem;
   color: #fff;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
+
+.dropdown {
+  margin-top: -1rem;
+  overflow: visible;
+}
+
+.dropdown-menu {
+  width: 89%;
+}
+
 .input-project-upload {
-  display: inline;
-  width: 55rem;
+  display: inline-block;
+  width: 50rem;
   font-size: 0.9rem;
   outline: none;
   border: none;
-  margin-right: 2rem;
+  /* margin-right: 2rem; */
   padding: 1rem 0.5rem;
   background: #2b3566;
   border-radius: 8px;
   color: #fff;
 }
+
 .input-project-upload::placeholder {
   color: #fff;
   font-weight: 200;
 }
+
 .label-project-upload {
   display: block;
   font-weight: 500;
   margin-bottom: 0.5rem;
   color: #fff;
 }
+
+.stack-details {
+  color: #fff;
+}
+
 .tech-stacks,
 .domain-stack {
-  border: 1px solid #684bfe;
+  border: 1px solid #fff;
+  color: #fff;
+
   font-size: 0.8rem;
   padding: 0.3rem;
   margin-right: 0.5rem;
   font-weight: 200;
   border-radius: 5px;
 }
+
+#basic-addon2 {
+  cursor: pointer;
+}
+
 .upload-photos-button {
   display: inline;
   width: 55rem;
@@ -54,16 +88,24 @@
   border-radius: 8px;
   color: #fff;
 }
-.upload-photos-button > img {
+
+.form-check-label {
+  color: #fff;
+}
+
+.upload-photos-button>img {
   filter: invert(1);
 }
+
 .image-content {
   margin-top: 0.8rem;
   color: #fff;
 }
+
 .image-stack {
   position: relative;
 }
+
 .cover {
   display: none;
   position: absolute;
@@ -84,17 +126,21 @@
   border-radius: 0.3rem;
   margin-right: 0.4rem;
 }
+
 .cover {
   display: grid;
   place-items: center;
 }
-.cover > img {
+
+.cover>img {
   height: 25px;
   width: 25px;
 }
+
 .btn-small {
   padding: 1.3rem 2rem;
 }
+
 .verification-button {
   width: 25rem;
   font-size: 1.1rem;
