--- a/client/src/components/homeCards/homeCards.css
+++ b/client/src/components/homeCards/homeCards.css
@@ -18,21 +18,21 @@
 }
 
 .cardSubtitle {
-    font-weight: 100;
-    font-size: 14px;
+    font-weight: 80;
+    font-size: 12px;
     margin-top: -20px !important;
 }
 
 .tech-stack-home {
     display: flex;
     color: #A4A4A4;
-    font-size: 15px;
-    font-weight: 200;
+    font-weight: 100;
 }
 
 .tech-stack-home>p {
     flex-wrap: wrap;
     font-size: 15px;
+    margin-left: 10px;
 }
 
 .circle {
@@ -41,8 +41,6 @@
     height: 15px;
     border-radius: 50%;
     background-color: #FD4A71;
-    opacity: 0.8;
     margin-top: 1rem;
-    margin-right: 0.5rem;
     /* padding-right: -50px; */
 }
