--- a/client/src/components/landingPage/landingPage.css
+++ b/client/src/components/landingPage/landingPage.css
@@ -1,14 +1,14 @@
 .landing-page {
     background-color: #111634;
     color: white;
-    z-index: 800;
+    /* z-index: 800; */
 }
 
 .cardLandingPage {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 75%;
+    /* width: 75%; */
     margin: 10rem auto;
 }
 
@@ -30,18 +30,21 @@
 }
 
 .card-title-landingPage {
-    font-size: 40px;
+    font-size: 30px;
 }
 
 .card-text-landingPage {
-    font-size: 18px;
+    font-size: 15px;
     width: 500px;
+    font-weight: 300;
+    line-height: 1.4;
     text-align: justify;
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
 }
 
 .navbar {
     background-color: #030824;
+    padding: 0.4rem 0;
 }
 
 .logo {
@@ -50,14 +53,19 @@
     color: #fff;
 }
 
+.logo>p {
+    padding: 0;
+    margin: 0;
+}
+
 .buttons {
     text-decoration: none;
     color: #fff;
-    background-color: #684BFE;
+    background-color: #000;
     padding: 1.2rem 1.5rem;
     border-color: transparent;
     border-radius: 10px;
-    font-size: 1.3rem;
+    font-size: 1rem;
     font-weight: 500;
 }
 
@@ -75,38 +83,39 @@
     background-color: #684BFE;
     color: #fff;
     border: none;
-    padding: 0.7rem 1.5rem;
+    width: 5.5rem;
+    height: 2.2rem;
+    border: 1px solid #684BFE;
     margin-right: 1rem;
-    border-radius: 10px;
-    font-size: 1.3rem;
-    font-weight: 500;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 .btn-landingPage:hover {
     background-color: #694bfea6;
 }
 
-.btn-outline-landingPage {
-    color: #fff;
-    background-color: transparent;
-    outline: 1px solid #684BFE;
-    border: none;
-    padding: 0.6rem 1.5rem;
-    margin-right: 1rem;
-    border-radius: 10px;
-    font-size: 1.3rem;
-    font-weight: 500;
-}
 
-.btn-outline-landingPage:hover {
+
+.btn-outline-landingPage {
+    background-color: #030824;
     color: #fff;
-    background-color: #684BFE;
+    border: none;
+    width: 5.5rem;
+    height: 2.2rem;
+    border: 1px solid #684BFE;
+    /* border: none; */
+    margin-right: 1rem;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 .footer {
     text-align: center;
     background-color: #030824;
     font-size: 3.5rem;
-    padding: 2rem;
+    padding: 1rem;
     color: #fff;
 }
