--- a/client/src/components/homeCards/homeCards.css
+++ b/client/src/components/homeCards/homeCards.css
@@ -8,6 +8,10 @@
     cursor: pointer;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .bg-color {
     background-color: #48CCC6 !important;
 }
