--- a/client/src/components/landingPage/landingPage.css
+++ b/client/src/components/landingPage/landingPage.css
@@ -9,18 +9,19 @@
     justify-content: space-around;
     align-items: center;
     /* width: 75%; */
-    margin: 10rem auto;
+    padding: 0;
+    margin: 4rem auto;
 }
 
 .cardLandingPage>img {
 
-    height: 263.43px;
-    width: 495.92px;
+    height: 300px;
+    width: 550px;
 }
 
 .landing-page:first-child>img {
-    height: 441px;
-    width: 761px;
+    height: 300px;
+    width: 550px;
     border-radius: 20px;
 }
 
