--- a/client/src/components/Profilepage/EditProfile.module.css
+++ b/client/src/components/Profilepage/EditProfile.module.css
@@ -1,90 +1,93 @@
-.boxcontainer{
-    width:480px;
-    min-height:600px;
-    display:flex;
+.boxcontainer {
+    width: 480px;
+    min-height: 600px;
+    display: flex;
     flex-direction: column;
     border-radius: 15px;
     background-color: #2B3566;
-    box-shadow: 0 0 2px rgba(15,15,15,0.28);
+    box-shadow: 0 0 2px rgba(15, 15, 15, 0.28);
     position: relative;
     overflow: hidden;
     justify-content: center;
 }
 
-.close{
-    height:20px;
-    width:20px;
-
+.close {
+    height: 20px;
+    width: 20px;
 }
-.formcontainer{
+
+.formcontainer {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
 }
-.formcontainer >h2{
+
+.formcontainer>h2 {
     justify-content: center;
     margin-left: 2.8em;
 }
-.formcontainer >img{
-    height:90px;
-    width:90px;
+
+.formcontainer>img {
+    height: 90px;
+    width: 90px;
     margin-left: 11rem;
-   margin-top: 1em;
-   margin-bottom: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
-.inputcontainer{
+
+.inputcontainer {
     outline-style: hidden;
-border-top: none;
-border-left: none;
-border-right: none;
-width:75%;
-height:50px;
-outline:none;
-background: #111634;
-margin-bottom: 10px;
-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-border-radius: 8px;
-padding:0px 30px;
-margin-left:3.5em;
-border-bottom:2px solid transparent;
-transition: all 200ms ease-in-out ;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    width: 75%;
+    height: 50px;
+    outline: none;
+    background: #111634;
+    margin-bottom: 10px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    padding: 0px 30px;
+    margin-left: 3.5em;
+    border-bottom: 2px solid transparent;
+    transition: all 200ms ease-in-out;
 }
 
-.inputcontainer::placeholder{
-    color:rgba(200,200,200,1);
-}
-.inputcontainer:not(:last-of-type){
-    border-bottom:2.5px solid rgba(200,200,200,0.4);
-
+.inputcontainer::placeholder {
+    color: rgba(200, 200, 200, 1);
 }
 
+.inputcontainer:not(:last-of-type) {
+    border-bottom: 2.5px solid rgba(200, 200, 200, 0.4);
 
-.inputcontainer:focus{
-    outline:none;
-    border-bottom: 3px solid rgba(104,75,254,1);
+}
+
+
+.inputcontainer:focus {
+    outline: none;
+    border-bottom: 3px solid rgba(104, 75, 254, 1);
     background-color: #fff;
 }
 
-.submitbutton1{
+.submitbutton1 {
     display: flex;
     justify-content: space-around;
-    width:60%;
-    padding:14px 30%;
+    width: 60%;
+    padding: 14px 30%;
     margin-left: 6em;
-    color:#fff;
+    color: #fff;
     font-size: 15px;
     font-weight: 600;
-border:none;
-border-radius: 5px;
-cursor:pointer;
-transition:all, 240ms ease-in-out;
-background:  #684BFE;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all, 240ms ease-in-out;
+    background: #684BFE;
 
 }
 
-.submitbutton1:hover{
+.submitbutton1:hover {
     border: 2px solid #684BFE;
     background-color: transparent;
 }
