--- a/client/src/components/Profilepage/BottomHeader.module.css
+++ b/client/src/components/Profilepage/BottomHeader.module.css
@@ -1,50 +1,52 @@
 .header {
-    
-    height: 5rem;
-    background: #030824;
-    padding: 0 10%;
-  }
-  
-  .header nav {
-    height: 100%;
-  }
-  
-  .header ul {
-    height: 100%;
-    list-style: none;
-    display: flex;
-    padding: 0;
-    margin: 0;
-justify-content: space-between;
 
-  }
- p{
+  height: 5rem;
+  background: #030824;
+  padding: 0 10%;
+}
+
+.header nav {
+  height: 100%;
+}
+
+.header ul {
+  height: 100%;
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  justify-content: space-between;
+
+}
+
+p {
   font-family: var(--bs-body-font-family);
   font-weight: 600;
   font-size: 22px;
   line-height: 48px;
   overflow-y: hidden !important;
-  
-  }
-  
-  
-  .header button {
-text-decoration: none;
 
-    width: 100%;
-    padding: 0rem 4.2rem;
-    background-color: #030824;
-    border-top: none;
-    border-right: none;
-    border-left:none;
-    border-bottom: none;
-  }
-  
-  .header button:hover,
-  
-  .header button.active {
-    color: #95bcf0;
-    
-padding-bottom:-10px;
-    border-bottom: 4px solid #95bcf0;
-  }
+}
+
+
+.header button {
+  text-decoration: none;
+
+  width: 100%;
+  padding: 0rem 4.2rem;
+  background-color: #030824;
+  color: #fff;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: none;
+}
+
+.header button:hover,
+
+.header button.active {
+  color: #95bcf0;
+
+  padding-bottom: -10px;
+  border-bottom: 4px solid #95bcf0;
+}
