--- a/client/src/components/Profilepage/Logout.css
+++ b/client/src/components/Profilepage/Logout.css
@@ -8,7 +8,7 @@
   background-color: #684BFE;
   /* outline: 1px solid #684BFE; */
   border: none;
-  /* padding: 0.7rem 1.5rem; */
+  padding: 0.4em 1rem;
   margin-right: 1rem;
   /* margin-bottom: 1em; */
   border-radius: 10px;
@@ -31,8 +31,8 @@ a:hover {
 
 .bell-notify {
   position: absolute;
-  top: 1.2rem;
-  right: 9rem;
+  top: 1.5rem;
+  right: 10rem;
   width: 28px;
   height: 28px;
 }
