--- a/client/src/components/Profilepage/Notification.css
+++ b/client/src/components/Profilepage/Notification.css
@@ -7,3 +7,17 @@
     background-color: #3f2d9b;
     color: #fff !important;
 }
+
+.ounter{
+    width:5px;
+    height:5px;
+    background-color: red;
+    border-radius:50%;
+    padding:5px;
+    font-size: 12px;
+    display:flex;
+    align-items: center;
+    padding-top: 200px;
+    justify-content: center;
+    position: absolute;
+}
