--- a/client/src/components/pagination/pagination.css
+++ b/client/src/components/pagination/pagination.css
@@ -2,6 +2,7 @@
     padding: 0.5rem 0;
     display: flex;
     justify-content: center;
+    margin-top: 170px;
 }
 .pagination-ul{
     list-style-type: none;
